--- a/challenge-files/01 - JavaScript Drum Kit/css/style.css
+++ b/challenge-files/01 - JavaScript Drum Kit/css/style.css
@@ -54,20 +54,26 @@ kbd {
 }
 
 @media only screen and (max-width: 600px){
+
   .keys{
     justify-content: space-around;
   }
+  
 }
 
 @media only screen and (min-width: 601px){
+
   .keys{
-    justify-content: space-between;
+    justify-content: center;
   }
+
 }
 
 @media only screen and (min-width: 1200px){
+
   .keys .row{
     display: flex;
     justify-content: center;
   }
+
 }
