--- a/css/components/footer.scss
+++ b/css/components/footer.scss
@@ -4,5 +4,7 @@ footer{
         border-top: 1px solid #8c8c8c;
         padding-top: 15px;
         padding-bottom: 15px;
+
+        font-size: 0.875em;
     }
 }
