fix: change the card height of  site.

--- a/css/components/cards.scss
+++ b/css/components/cards.scss
@@ -10,6 +10,7 @@
             }
 
             .card{
+                height: 90%;
                 margin: 10px;
                 background-color: $backgroung-card;
                 box-shadow: 1px 1px 5px #000000;
