--- a/challenge-files/04 - Array Cardio Day 1/css/style.css
+++ b/challenge-files/04 - Array Cardio Day 1/css/style.css
@@ -17,7 +17,6 @@ header{
     width: 100%;
     display: flex;
     align-items: center;
-    border-bottom: 2px solid #444444;
     text-align: center;
 }
 
@@ -32,7 +31,19 @@ a:hover{
 }
 
 h1{
+    width: 100%;
+    margin-top: 10px;
+}
+
+h1{
     height: 50px;
+    border-bottom: 2px solid #444444;
+    margin-bottom: 5px;
+}
+
+h2{
+    border-bottom: 1px solid #444444;
+    text-align: left;
 }
 
 .container{
@@ -40,13 +51,23 @@ h1{
     margin: auto;
 }
 
-main{
+.main{
     margin-top: 5%;
     margin-bottom: 10%;
 }
 
 section{
     padding: 15px;
+}
+
+header h2{
+    width: 90%;
+}
+
+header span{
+    width: 10%;
+    border-bottom: 1px solid #444444;
+    text-align: right;
 }
 
 span{
@@ -65,9 +86,10 @@ footer p{
 
 @media only screen and (max-width: 600px){
 
-    main{
+    .row{
         display: flex;
         flex-direction: column;
+        align-items: flex-end;
     }
 
     section{
@@ -77,10 +99,11 @@ footer p{
 
 @media only screen and (min-width: 768px){
     
-    main{
+    .row{
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
+        align-items: flex-end;
     }
 
     section{
