--- a/challenge-files/06 - Type Ahead/css/style.css
+++ b/challenge-files/06 - Type Ahead/css/style.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  background: #ffc600;
+  background: #eca769;
   font-family: 'helvetica neue';
   font-size: 20px;
   font-weight: 200;
@@ -70,5 +70,5 @@ span.population {
 }
 
 .hl {
-  background: #ffc600;
+  background: #eca769;
 }
