--- a/challenge-files/08 - Fun with HTML5 Canvas/css/style.css
+++ b/challenge-files/08 - Fun with HTML5 Canvas/css/style.css
@@ -39,8 +39,6 @@ a:visited{
 canvas{
     background-color: #ffffff;
     box-shadow: 1px 1px 5px #1c1c1c;
-    width: 100%;
-    height: 100%;
 }
 
 .container{
@@ -58,4 +56,11 @@ footer .container{
     padding-top: 15px;
     border-top: 1px solid #858585;
 
+}
+
+@media only screen and (max-width: 767px){
+    canvas{
+        width: 100%;
+        height: 100%;
+    }
 }
