--- a/challenge-files/11 - Custom Video Player/css/style.css
+++ b/challenge-files/11 - Custom Video Player/css/style.css
@@ -7,6 +7,7 @@ html {
 }
 
 body {
+  font-size: 1em;
   margin: 0;
   padding: 0;
   display: flex;
@@ -23,9 +24,9 @@ body {
   border: 5px solid rgba(0,0,0,0.2);
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
   position: relative;
-  font-size: 0;
+  /* font-size: 0px; */
+  line-height: 0;
   overflow: hidden;
-  
 }
 
 /* This css is only applied when fullscreen is active. */
@@ -70,7 +71,7 @@ body {
   justify-content: center;
   bottom: 0;
   width: 100%;
-  transform: translateY(100%) translateY(-5px);
+  transform: translateY(100%);
   transition: all .3s;
   flex-wrap: wrap;
   background: rgba(0,0,0,0.1);
@@ -171,17 +172,16 @@ input[type=range]::-moz-range-thumb {
 .timer{
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 15px;
 	margin: 5px;
 	padding-left: 5px;
   padding-right: 5px;
-  
 }
 
-.timer button{
-  font-size: 1em;
+.timer span{
+  font-size: 0.875em;
 	color: #fff;
   display: flex;
-  background-color: transparent;
   border: none;
 }
