--- a/css/main.scss
+++ b/css/main.scss
@@ -2,6 +2,7 @@
 @import './components/header.scss';
 @import './components/cards.scss';
 @import './components/footer.scss';
+@import './components/stickers.scss';
 
 *{
     padding: 0;
