--- a/css/components/cards.scss
+++ b/css/components/cards.scss
@@ -3,12 +3,12 @@
     padding-bottom: 10%;
     .container{
         
-        padding: 15px;
+        padding-top: 15px;
+        padding-bottom: 15px;
         .row{
 
             .card{
                 height: 95%;
-                margin: 15px;
                 background-color: $backgroung-card;
                 box-shadow: 1px 1px 5px #000000;
                 text-align: center;
@@ -32,6 +32,13 @@
                     padding: 15px;
                     height: 100%;
                     margin-bottom: 20px;
+
+                    .stickers{
+                        display: flex;
+                        flex-wrap: wrap;
+                        justify-content: center;
+                        // flex-direction: column;
+                    }
 
                     .card-links{
                         display: flex;
@@ -60,20 +67,23 @@
             flex-direction: column;
         }
 
-        .card-content{
-            padding: 5px;
-            height: 100%;
-            margin-bottom: 20px;
+        .card{
+            width: 100%;
+            margin-top: 15px;
+            margin-bottom: 15px;
 
-            .stickers{
-                display: flex;
-                flex-direction: column;
-            }
-
-            .card-links{
-                padding: 1px;
+            .card-content{
+                padding: 5px;
+                height: 100%;
+                margin-bottom: 20px;
+    
+    
+                .card-links{
+                    padding: 1px;
+                }
             }
         }
+
     }
 }
 
@@ -82,6 +92,10 @@
     .main-content{
         .row {
             display: flex;
+
+            .card{
+                margin: 15px;
+            }
         }
     }
 
