--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@
 }
 .main-content .container .row .card .card-content {
   padding: 15px;
-  height: 100%;
+  height: auto;
   margin-bottom: 20px;
 }
 .main-content .container .row .card .card-content .stickers {
