--- a/challenge-files/28 - Video Speed Controller/css/style.css
+++ b/challenge-files/28 - Video Speed Controller/css/style.css
@@ -30,7 +30,8 @@ video {
 }
 
 .speed-bar {
-  width: 100%;
+  /* width: 100%; */
+  height: 16.3%;
   background: linear-gradient(-170deg, #2376ae 0%, #c16ecf 100%);
   text-shadow: 1px 1px 0 rgba(0,0,0,0.2);
   display: flex;
@@ -38,5 +39,36 @@ video {
   justify-content: center;
   padding: 2px;
   color: white;
-  height: 16.3%;
+}
+
+
+
+@media only screen and (max-width: 768px){
+  .wrapper{
+    display: flex;
+    width: 85%;
+    flex-direction: column;
+  }
+
+  video{
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+  }
+
+  .speed{
+    width: auto;
+  }
+
+  .speed-bar{
+    height: 100%;
+    width: 16.3%;
+  }
+}
+
+@media only screen and (min-width: 769px){
+  .speed-bar{
+    width: 100%;
+  }
 }
