--- a/challenge-files/29 - Countdown Timer/css/style.css
+++ b/challenge-files/29 - Countdown Timer/css/style.css
@@ -80,3 +80,14 @@ body {
   font-size: 4rem;
   color: white;
 }
+
+
+@media only screen and (max-width: 600px){
+  .timer__controls{
+    flex-wrap: wrap-reverse;
+  }
+
+  .display__time-left{
+    font-size: 10rem;
+  }
+}
